force-app/main/default/objects/H8_File_Upload_Configuration__mdt/H8_File_Upload_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This object is used to support with file upload configurations for the flow file upload component</description>
    <label>H8 File Upload Configuration</label>
    <pluralLabel>H8 File Upload Configurations</pluralLabel>
</CustomObject>