force-app/main/default/objects/H8_File_Upload_Configuration__mdt/fields/OverrideFileName__c.field-meta.xml
<CustomField>
    <fullName>OverrideFileName__c</fullName>
    <inlineHelpText>Enter a value that you want to change the uploaded file name to. I.e. you have handling Bank Statements you might want to change the name of the file to Bank Statement</inlineHelpText>
    <label>Override File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>