force-app/main/default/objects/H8_File_Upload_Configuration__mdt/fields/Share_Type__c.field-meta.xml
<CustomField>
    <fullName>Share_Type__c</fullName>
    <description>The ShareType of the ContentDocumentLink to be created</description>
    <inlineHelpText>V = Viewer, C = Collaborator, I = Inferred (Set to this to control access by associated record)</inlineHelpText>
    <label>Share Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <default>true</default>
                <label>Viewer</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Collaborator</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Inferred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>