force-app/main/default/objects/H8_File_Upload_Configuration__mdt/fields/ShareType__c.field-meta.xml
<CustomField>
    <fullName>ShareType__c</fullName>
    <description>The Visibility of the ContentDocumentLink to be created. Previously tied to ShareType but these are now separated out into Visibility and ShareType</description>
    <inlineHelpText>If using this flow for linking with an experience cloud you should select All Users</inlineHelpText>
    <label>Visibility</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AllUsers</fullName>
                <default>true</default>
                <label>AllUsers</label>
            </value>
            <value>
                <fullName>InternalUsers</fullName>
            </value>
            <value>
                <fullName>SharedUsers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>